@@ -44,6 +44,14 @@ android {
         archivesBaseName = 'fieldTask'      // smap
     }
 
+    tasks.withType(JavaCompile).configureEach{
+        options.fork = true
+        options.forkOptions.jvmArgs +=[
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
+    }
+
     signingConfigs {
         release {
             if (secrets.getProperty('RELEASE_STORE_FILE')) {
@@ -239,8 +247,8 @@ android {
 
     compileOptions {
         coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
 
     testOptions {
@@ -261,6 +269,7 @@ android {
         checkReleaseBuilds false
         lintConfig file("${project.rootDir}/config/lint.xml")
     }
+    namespace 'org.odk.collect.android'
 }
 
 configurations.all {
@@ -278,7 +287,7 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation "androidx.core:core-ktx:${rootProject.coreKtxVersion}"
+    implementation "androidx.core:core-ktx:1.16.0"
     implementation 'androidx.browser:browser:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation "androidx.work:work-runtime:2.7.1"
